--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               primary: "rgb(180, 244, 97)",
               secondary: "rgb(249, 247, 243)",
               donatebg: "rgba(17, 17, 17, 0.05)",
+              textColor1: "rgba(17, 17, 17, 0.7);",
             },
             fontFamily: {
               Inter: "Inter",
@@ -44,7 +45,33 @@
     </script>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="bg-secondary">
+        <div
+          class="flex justify-between items-center w-11/12 md:w-10/12 mx-auto py-4 md:py-6"
+        >
+          <div class="">
+            <button
+              class="bg-primary text-base md:text-lg lg:text-xl font-bold py-2 md:py-3 px-6 md:px-8 rounded-md"
+            >
+              Blog
+            </button>
+          </div>
+          <div
+            class="flex flex-col sm:flex-col md:flex-row lg:flex-row items-center gap-2 md:gap-4"
+          >
+            <img src="./assets/logo.png" alt="" />
+            <h2 class="text-base md:text-xl font-bold">Donate Bangladesh</h2>
+          </div>
+          <div class="flex items-center gap-2 md:gap-4">
+            <img src="./assets/coin.png" alt="" />
+            <h2 class="text-base md:text-lg lg:text-xl text-textColor1">
+              5500 BDT
+            </h2>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
