--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <header>
       <nav class="bg-secondary">
         <div
-          class="flex justify-between items-center w-11/12 md:w-10/12 mx-auto py-4 md:py-6"
+          class="flex justify-around md:justify-between items-center md:w-10/12 mx-auto pt-4 md:pt-6 pb-8 md:pb-16"
         >
           <div class="">
             <button
@@ -71,8 +71,135 @@
           </div>
         </div>
       </nav>
+
+      <div class="flex justify-center items-center text-center gap-3 mt-20">
+        <button class="btn bg-primary">Donation</button>
+        <button class="btn">History</button>
+      </div>
     </header>
-    <main></main>
+    <main class="mt-8">
+      <div class="w-10/12 mx-auto">
+        <div
+          class="grid md:grid-cols-12 gap-8 p-8 border-2 border-opacity-10 rounded-xl"
+        >
+          <img src="./assets/noakhali.png" class="md:col-span-5" />
+          <div class="md:col-span-7">
+            <div
+              class="flex justify-center items-center gap-2 bg-donatebg w-28 h-11 rounded-md"
+            >
+              <img src="./assets/coin.png" alt="" />
+              <p class="text-textColor1">0 BDT</p>
+            </div>
+            <div class="space-y-5 mt-4">
+              <h1 class="text-xl font-bold">
+                Donate for Flood at Noakhali, Bangladesh
+              </h1>
+              <p class="text-gray-500">
+                The recent floods in Noakhali have caused significant damage to
+                homes infrastructure. Your donation will help provide essential
+                supplies and to those affected by this disaster. Every
+                contribution, big or small, makes difference. Please join us in
+                supporting the relief efforts and making a positive impact on
+                the lives of those in need.
+              </p>
+              <input
+                type="number"
+                name=""
+                id=""
+                placeholder="Write Donation Amount"
+                class="w-full border rounded border-opacity-10 p-3"
+              />
+              <button
+                class="py-3 px-8 rounded-md bg-primary w-full text-xl font-bold"
+              >
+                Donate Now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div
+          class="grid md:grid-cols-12 gap-8 p-8 border-2 border-opacity-10 rounded-xl mt-8"
+        >
+          <img src="./assets/feni.png" class="md:col-span-5" />
+          <div class="md:col-span-7">
+            <div
+              class="flex justify-center items-center gap-2 bg-donatebg w-28 h-10 rounded-md"
+            >
+              <img src="./assets/coin.png" alt="" />
+              <p class="text-textColor1">600 BDT</p>
+            </div>
+            <div class="space-y-6 mt-4">
+              <h1 class="text-xl font-bold">
+                Donate for Flood Relief in Feni,Bangladesh
+              </h1>
+              <p class="text-gray-500">
+                The recent floods in Feni have devastated local communities,
+                leading to severe disruption and loss. Your generous donation
+                will help provide immediate aid, including food, clean water,
+                and medical supplies, to those affected by this calamity.
+                Together, we can offer crucial support and help rebuild lives in
+                the aftermath of this disaster. Every contribution counts
+                towards making a real difference. Please consider donating today
+                to assist those in urgent need.
+              </p>
+              <input
+                type="number"
+                name=""
+                id=""
+                placeholder="Write Donation Amount"
+                class="w-full border rounded border-opacity-10 p-3"
+              />
+              <button
+                class="py-3 px-8 rounded-md bg-primary w-full text-xl font-bold"
+              >
+                Donate Now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div
+          class="grid md:grid-cols-12 gap-8 p-8 border-2 border-opacity-10 rounded-xl mt-8"
+        >
+          <img src="./assets/quota-protest.png" class="md:col-span-5" />
+          <div class="md:col-span-7">
+            <div
+              class="flex justify-center items-center gap-2 bg-donatebg w-28 h-11 rounded-md"
+            >
+              <img src="./assets/coin.png" alt="" />
+              <p class="text-textColor1">2400 BDT</p>
+            </div>
+            <div class="space-y-6 mt-4">
+              <h1 class="text-xl font-bold">
+                Aid for Injured in the Quota Movement
+              </h1>
+              <p class="text-gray-500">
+                The recent Quota movement has resulted in numerous injuries and
+                significant hardship for many individuals. Your support is
+                crucial in providing medical assistance, rehabilitation, and
+                necessary supplies to those affected. By contributing, you help
+                ensure that injured individuals receive the care and support
+                they need during this challenging time. Every donation plays a
+                vital role in alleviating their suffering and aiding in their
+                recovery. Please consider making a donation to support these
+                brave individuals in their time of need.
+              </p>
+              <input
+                type="number"
+                name=""
+                id=""
+                placeholder="Write Donation Amount"
+                class="w-full border rounded border-opacity-10 p-3"
+              />
+              <button
+                class="py-3 px-8 rounded-md bg-primary w-full text-xl font-bold"
+              >
+                Donate Now
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
