--- a/index.html
+++ b/index.html
@@ -75,14 +75,24 @@
         </div>
       </nav>
 
-      <div class="flex justify-center items-center text-center gap-3 mt-12">
-        <button class="btn bg-primary">Donation</button>
-        <button class="btn">History</button>
+      <div class="flex justify-center items-center gap-3 mt-12">
+        <button
+          id="donation-tab"
+          class="py-4 px-8 text-xl font-semibold rounded-md bg-primary hover:border-2 border-black"
+        >
+          Donation
+        </button>
+        <button
+          id="history-tab"
+          class="py-4 px-8 text-xl rounded-md font-semibold hover:border-2 border-black"
+        >
+          History
+        </button>
       </div>
     </header>
 
     <main class="mt-8">
-      <div class="w-10/12 mx-auto">
+      <div id="donation-container" class=" w-10/12 mx-auto">
         <div
           class="grid md:grid-cols-12 gap-6 p-8 border-2 border-opacity-10 rounded-xl"
         >
@@ -209,6 +219,8 @@
           </div>
         </div>
       </div>
+
+      <div id="history-container"></div>
     </main>
     <footer class="mt-10">
       <div class="bg-secondary h-20"></div>
