--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </header>
 
     <main class="mt-8">
-      <div id="donation-container" class=" w-10/12 mx-auto">
+      <div id="donation-container" class="w-10/12 mx-auto">
         <div
           class="grid md:grid-cols-12 gap-6 p-8 border-2 border-opacity-10 rounded-xl"
         >
@@ -220,7 +220,7 @@
         </div>
       </div>
 
-      <div id="history-container"></div>
+      <div id="history-container" class="hidden"></div>
     </main>
     <footer class="mt-10">
       <div class="bg-secondary h-20"></div>
