--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
           class="flex justify-around md:justify-between items-center md:w-10/12 mx-auto pt-4 md:pt-6 pb-8 md:pb-12"
         >
           <div class="">
-            <button
-              class="bg-primary text-base md:text-lg lg:text-xl font-bold py-2 md:py-3 px-6 md:px-8 rounded-md"
-            >
-              Blog
-            </button>
+            <a href="./blog.html">
+              <button
+                class="bg-primary text-base md:text-lg lg:text-xl font-bold py-2 md:py-3 px-6 md:px-8 rounded-md"
+              >
+                Blog
+              </button>
+            </a>
           </div>
           <div
             class="flex flex-col sm:flex-col md:flex-row lg:flex-row items-center gap-2 md:gap-4"
