--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&display=swap"
       rel="stylesheet"
     />
-
     <!-- Tailwind CSS Configuration -->
     <script>
       tailwind.config = {
@@ -79,21 +78,26 @@
       </nav>
 
       <div class="flex justify-center items-center gap-3 mt-12">
-        <button
-          id="donation-tab"
-          class="py-4 px-8 text-xl font-semibold rounded-md bg-primary hover:border-2 border-black"
-        >
-          Donation
-        </button>
-        <button
-          id="history-tab"
-          class="py-4 px-8 text-xl rounded-md font-semibold hover:border-2 border-black"
-        >
-          History
-        </button>
+        <a href="./index.html">
+          <button
+            id="donation-tab"
+            class="py-4 px-8 text-xl font-semibold rounded-md bg-primary hover:border-2 border-black"
+          >
+            Donation
+          </button>
+        </a>
+
+        <a href="./index.html">
+          <button
+            id="history-tab"
+            class="py-4 px-8 text-xl rounded-md font-semibold hover:border-2 border-black"
+          >
+            History
+          </button>
+        </a>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <div class="w-10/12 mx-auto">
         <div class="flex items-center gap-2 my-8 ml-4">
           <h1 class="text-3xl font-bold">Important FAQ</h1>
@@ -154,6 +158,9 @@
           </div>
         </div>
       </div>
-    </main>
+    </main> -->
+
+    <script src="./js/utilities.js"></script>
+    <script src="./js/donation.js"></script>
   </body>
 </html>
