--- a/blog.html
+++ b/blog.html
@@ -97,7 +97,7 @@
         </a>
       </div>
     </header>
-    <!-- <main>
+    <main>
       <div class="w-10/12 mx-auto">
         <div class="flex items-center gap-2 my-8 ml-4">
           <h1 class="text-3xl font-bold">Important FAQ</h1>
@@ -158,7 +158,7 @@
           </div>
         </div>
       </div>
-    </main> -->
+    </main>
 
     <script src="./js/utilities.js"></script>
     <script src="./js/donation.js"></script>
