blog answer updated successfully

--- a/blog.html
+++ b/blog.html
@@ -90,9 +90,10 @@
           </div>
           <div class="collapse-content">
             <p>
-              The Document Object Model (DOM) is a blueprint that allows
-              developers to access and modify the elements of a web page.
-              JavaScript makes a webpage interactive by manipulating the DOM
+              The Document Object Model (DOM) is a programming interface that
+              allows developers to access,modify, and interact with the elements
+              of a web page. JavaScript manipulates the DOM to make web pages
+              dynamic and interactive.
             </p>
           </div>
         </div>
@@ -105,8 +106,8 @@
             <p>
               For single element: document.getElementById() and
               document.querySelector() <br />
-              For multiple element: document.getElementByClass()
-              ,document.getElementByTagName(),document.querySelectorAll()
+              For multiple element: document.getElementsByClassName()
+              ,document.getElementsByTagName(),document.querySelectorAll()
             </p>
           </div>
         </div>
@@ -131,9 +132,10 @@
           </div>
           <div class="collapse-content">
             <p>
-              I can manipulate an element's using setAttribute() ,
-              getAttribute() , removeAttribute() , and can styles add .className
-              and classList[add(),remove()]
+              I can manipulate an element's attributes using setAttribute() ,
+              getAttribute() , and removeAttribute() .For styles,I can add or
+              remove classes using .className or classList.add() and
+              classList.remove() .
             </p>
           </div>
         </div>
